--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,6 @@
  
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background: linear-gradient(
-    to bottom,
-    #050816,
-    #3D37DF,
-    
-  );
-
+  background: #08080e;
+  scroll-behavior: smooth;
 }
