--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   width: 99%;
   height: 99%;
   border-radius: 8px;
-  border: #ff00008e solid 2px;
+  border: #007aff solid 2px;
 }
 .slide_direction {
   display: flex;
@@ -26,7 +26,7 @@
 }
 .left,
 .right {
-  background-color: #fb666675;
+  background-color: #204b78;
   color: #fff;
   padding: 10px 8px 8px 13px;
   margin: 0 20px;
@@ -51,11 +51,11 @@
   gap: 20px;
 }
 .dot {
-  background-color: #333;
+  background-color: #007aff;
   width: 15px;
   height: 15px;
   border-radius: 50%;
 }
 .active {
-  background-color: #fa2020;
+  background-color: #1f03ad;
 }
